# langgraph-email-assistant

./: .gitignore  langgraph.json  pyproject.toml
src/email_assistant/: email_assistant.py  email_assistant_hitl.py  email_assistant_hitl_memory.py  email_assistant_hitl_memory_gmail.py  langgraph_101.py  print_graph.py
src/email_assistant/eval/: evaluation.py
